			   XPCE ChangeLog
			   ==============

VERSION 6.6.3, distributed with SWI-Prolog 5.6.3
================================================

* ENHANCED: PceEmacs colouring: more aggressive colouring of the current
  clause.

* ADDED: Bug#136: actually use directory argument in display<-win_directory.
  Holger Kanwischer.


VERSION 6.6.1, distributed with SWI-Prolog 5.6.1
================================================

* COMPAT: changed library(find_file) to confirm on overwrite on both the
  private file prompter and the Windows one.  Jelmer Jellema.

VERSION 6.6.0, distributed with SWI-Prolog 5.6.0
================================================

VERSION 6.5.39, distributed with SWI-Prolog 5.5.39
==================================================

* ADDED: pce_prolog_xref.pl: process terms in :- include directives.

* MODIFIED: `graphical->request_compute: Val' invokes ->compute if the
  already registered compute request has a different value.  This generally
  should fix applications using this feature, but it may cause loops in
  computation.

VERSION 6.5.38, distributed with SWI-Prolog 5.5.38
==================================================

* PORT: Windows: Work around MSVC6 bug in `string->insert_character'.
  Jelmer Jellema.

* ADDED: Emacs buffer menu: kill selected buffer on DEL and backspace keys.

* ENHANCED: cleanup ENC_WCHAR issues.  Use new encoding API to protect
  from unsolicitated changes in the encoding of text-strings.

* FIXED: Encoding issue with pce_open/3 on stream objects (crashes
  XPCE httpd).  Anjo Anjewierden.

VERSION 6.5.37, distributed with SWI-Prolog 5.5.37
==================================================

* FIXED: Bug#117: new(X, 9).  Dmitry.

* FIXED: Bug#108: Unicode support in the classes type, class and method
  to allow for unicode names in programming.  New code also fixes
  potential buffer overruns caused by invalid programs.  Dmitry.

* FIXED: Bug in class name that can cause identity problems with names